--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -67,7 +67,7 @@
 
   100% 
   {
-    width: 70%;
+    width: 80%;
   }
 }
 
